--- a/blur-i2-bridge/.classpath
+++ b/blur-i2-bridge/.classpath
@@ -6,14 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src/main/resources"/>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -29,5 +22,225 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/da-arload-filesystem-example/schema-mapping-jar/schema.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/aopalliance.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-Core-3.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-delps-service-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-delps-service-jaxws-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-delps-service-jaxws-autogen-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-delps-service-sdk-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-delps-web-services-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-event-service-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-adapter-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-common-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-connector-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-document-service-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-exceptions-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-loader-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-retrieval-service-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-retrieval-service-jaxws-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-retrieval-service-jaxws-autogen-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-retrieval-service-sdk-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-service-jaxb-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-services-common-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-services-web-services-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-source-initializer-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-subset-creation-service-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-subset-creation-service-jaxws-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-subset-creation-service-jaxws-autogen-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-subset-exploration-service-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-subset-exploration-service-jaxws-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-subset-exploration-service-jaxws-autogen-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-subset-exploration-service-sdk-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-subset-locator-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-type-conversion-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-data-acquisition-external-data-xsd-creator-1.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-DynamicSecurity-3.1.11.0.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-Read_Common-3.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/apollo-Search-3.1.11.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/master/javadoc/apollo-3.1.11.0-docs-sdk.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/commons-exec-1.1.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/commons-fileupload-1.3.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/commons-logging-1.1.2.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/commons-validator-1.4.1.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/cs2jsupport.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/derby.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/groovy-2.3.10.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/groovy-json-2.3.10.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guava.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guice-assistedinject.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guice-grapher.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guice-jmx.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guice-jndi.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guice-multibindings.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guice-persist.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guice-servlet.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guice-spring.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guice-struts2.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guice-throwingproviders.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/guice.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/i2-java-utils-1.1.7.0.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/i2-tracing-api-1.1.7.0.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/i2-tracing-api-log4jimpl-1.1.7.0.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/icu4j.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/ilel-newton-2.0.0.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/jackson-annotations-2.6.3.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/jackson-core-2.6.3.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/jackson-databind-2.6.3.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/jackson-datatype-jsr310-2.6.3.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/jackson-jaxrs-base-2.6.3.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/jackson-jaxrs-json-provider-2.6.3.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/javax.inject.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/kryo-2.24.0.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/mapdb-1.0.7.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/minlog-1.2.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/objenesis-1.2.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/reflectasm-1.09-shaded.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/tika-app-1.5-fixed.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/wink-1.4.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/wink-client-1.4.jar"/>
+	<classpathentry kind="lib" path="/master/build/toolkit/application/shared/lib/wink-common-1.4.jar"/>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
