--- a/blur-i2-bridge/pom.xml
+++ b/blur-i2-bridge/pom.xml
@@ -14,7 +14,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<i2sdk>C:\IBM\i2analyze\SDK\sdk-projects</i2sdk>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.glassfish.grizzly</groupId>
@@ -25,6 +24,11 @@
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-grizzly2-http</artifactId>
 			<version>2.22.1</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
